Clean up jmh support